# g0

./: .gitignore  AGENTS.md  README.md  TASKS.md  pyproject.toml
.github/workflows/: contribution-adder.yml
docs/: pat-scopes.md
src/contribution_adder/: __init__.py  __main__.py  config.py  contribution_runner.py  primes.py
tests/: conftest.py  test_contribution_runner.py  test_primes.py
